--- a/pages/zuhause.html
+++ b/pages/zuhause.html
@@ -5,25 +5,25 @@
             <div class="tile">
                 <div class="tile is-parent is-vertical">
                     <article class="tile is-child box">
-                        <p class="title">Willkommen bei
-                            <strong>applied</strong>|experience</p>
+                        <p class="title"> Aus Erfahrungen lernen</p>
                     </article>
                     <article class="tile is-child box">
+                        <p class="title">
+                            Was ist AppEx?</p>
                         <div class="content">
                             <article class="message is-dark">
                                 <div class="message-body">
-                                    <p class="title">Was ist AppEx?</p>
                                     <p>AppEx ist eine Web-basiertes Planungs- und Analysetool für alle, die in Planungs- und
-                                        Bauprojekten koordinative Aufgaben wahrnehmen AppEx basiert auf Erfahrungen. Es ermöglicht
-                                        Nutzern die Planung von Aktivitäten mit Hilfe von eigenen oder in einer Gruppe geteilten
-                                        Erfahrungen
+                                        Bauprojekten koordinative Aufgaben wahrnehmen. AppEx basiert auf Erfahrungen. Es
+                                        ermöglicht Nutzern die Planung von Aktivitäten mit Hilfe von eigenen oder in einer
+                                        Gruppe geteilten Erfahrungen.
                                     </p>
                                     <br>
-                                    <p>AppEx ermöglicht es, Lösungen zu Problemen zu dokumentieren und zu Phasenende die Qualität
-                                        von Arbeitsprodukten oder Dienstleistungen zu überprüfen</p>
+                                    <p>AppEx ermöglicht es, Lösungen zu Problemen zu dokumentieren und bei Phasenende die Qualität
+                                        von Arbeitsprodukten oder Dienstleistungen zu überprüfen.</p>
                                     <br>
-                                    <p>AppEx visualisiert den Projektstatus grafisch, sodass die Planung und Qualitätssicherung
-                                        klar erkennbar sind
+                                    <p>AppEx visualisiert den Projektstatus grafisch, sodass der Stand von Planung und Qualitätssicherung
+                                        jederzeit klar erkennbar sind.
                                     </p>
                                 </div>
                             </article>
@@ -46,10 +46,9 @@
                     <div class="content">
                         <article class="message is-dark">
                             <div class="message-body">
-                                <p>Our solutions are cost effective and have helped clients save thousands of dollars per employee
-                                    every year. We think the current economic environment is an ideal time to take advantage
-                                    of improved staff availability and develop the tools that will save you money and make
-                                    you more efficient now. Invest in your knowledge infrastructure today!</p>
+                                <p>Applied Experience GmbH entwickelt und vertreibt die AppEx Software, welche von Personen
+                                    und Firmen eingesetzt werden kann. Für Firmen bieten wir auch Beratung im Aufbau von
+                                    Wissensmanagement Expertise an.</p>
                             </div>
                         </article>
                     </div>
@@ -59,61 +58,21 @@
         <div class="tile is-parent">
             <article class="tile is-child box">
                 <div class="content">
-                    <p class="title">Unser Produkt</p>
+                    <p class="title">Nutzen</p>
                     <div class="content">
                         <article class="message is-dark">
                             <div class="message-body">
-                                <p>Sehr einfache Anwendung. Spart Zeit in der Erstellung von Plänen, Kostenvoranschlägen, Submissionen,
-                                    und in der Qualitätskontrolle auf der Baustelle</p>
-                                <br>
-                                <p>Höhere Planungsqualität in der Projektierung ermöglicht: - Genauere Kostenvoranschläge und
-                                    Ausschreibungen - Weniger Nachträge und Projektänderungen</p>
-                                <br>
-                                <p>Reduziert die Fehlerquote, fördert die Zusammenarbeit</p>
-                                <br>
-                                <p>Ermöglicht es, dem Bauherrn wichtige Fragen frühzeitig zu stellen</p>
-                                <br>
-                                <p>Dokumentation von Lösungen. Qualitätskontrolle von Arbeitsprodukten</p>
-                                <br>
-                                <p>Sofort erkennbarer Stand von Planung und Qualitätskontrolle</p>
-                                <br>
-                                <p>Erfahrungen und Lehren werden für andere Projekte anwendbar</p>
-                                <br>
-                                <p>Dank Nutzerfreundlichkeit und Relevanz täglich anwendbar</p>
-                                <br>
-                                <p>Immer verfügbar - funktioniert auf allen mobilen Geräten</p>
+                                <p>• Sehr einfache Anwendung. Spart Zeit und vermeidet Fehler in der Erstellung von Plänen,
+                                    Kostenvoranschlägen und Submissionen, sowie in der Qualitätskontrolle auf der Baustelle</p>
+                                <p>• Höhere Planungsqualität in der Projektierung ermöglicht genauere Kostenvoranschläge und
+                                    Ausschreibungen, weniger Nachträge und Projektänderungen</p>
+                                <p>• Stellt sicher, dass wichtige Fragen der Bauherrschaft frühzeitig gestellt werden</p>
+                                <p>• Sofort erkennbarer Stand von Planung und Qualitätskontrolle</p>
+                                <p>• Erfahrungen werden für andere Projekte anwendbar</p>
+                                <p>• Immer verfügbar - funktioniert auf allen mobilen Geräten</p>
                             </div>
                         </article>
                     </div>
-                </div>
-            </article>
-        </div>
-    </div>
-
-    <div class="tile is-ancestor">
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="subtitle">
-                    Intranets
-                </p>
-                <p class="subtitle">Procedure Manuals</p>
-                <div class="content">
-                    <article class="message is-dark">
-                        <div class="message-body">
-                            <p>Intranets allow you to disseminate corporate documents, resources, calendars, news, etc. through
-                                a web-based application where documents can be displayed as web pages. </p>
-                        </div>
-                    </article>
-                </div>
-            </article>
-        </div>
-        <div class="tile is-parent is-8">
-            <article class="tile is-child box">
-                <p class="subtitle">Main column</p>
-                <p class="subtitle">With some content</p>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor
-                        vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
                 </div>
             </article>
         </div>
