--- a/pages/deBlog.html
+++ b/pages/deBlog.html
@@ -1,48 +1,47 @@
-<div class="columns">
-    <div class="column">
-        <div class="card">
-            <div class="card-image">
-            </div>
-            <div class="card-content">
-                <div class="media">
-                    <div class="media-left">
-                        <figure class="image is-48x48">
-                            <img src="images/avatar.png">
-                        </figure>
+<br>
+<br>
+<div class="marginTop">
+    <div class="tiles" class="marginTop">
+        <div class="tile is-ancestor">
+            <div class="tile is-vertical is-8">
+                <div class="tile">
+                    <div class="tile is-parent is-vertical">
+                        <article class="tile is-child box">
+                            <p class="title">Blog - Wissensmanagement in Planung und Baumanagement</p>
+                        </article>
+
+                        <article class="tile is-child box">
+                            <article class="message is-dark">
+                                <div class="message-body">
+                                    <p class="title">Blog</p>
+                                    <p>Blog Beiträge folgen.</p>
+                                    <br>
+                                </div>
+                            </article>
+                        </article>
                     </div>
-                    <div class="media-content">
-                        <p class="title is-4">Chris Marolf</p>
-                        <p class="subtitle is-6">Admin</p>
+                    <div class="tile is-parent">
+                        <article class="tile is-child box">
+                            <figure class="image">
+                                <img src="images/skyline.jpg">
+                            </figure>
+                        </article>
                     </div>
                 </div>
+            </div>
 
-                <div class="content">
-                    <p class=cardText>Herzlich Willkommen</p>
+            <div class="tile is-parent">
+                <article class="tile is-child box">
+                    <article class="message is-dark">
+                        <div class="message-body">
+                            <p class="title">Kontakt</p>
+                            <p>Applied Experience GmbH ist in Baden, CH basiert.
+                                <br>Kontaktieren Sie uns unter info@appex.ch.
+                            </p>
+                    </article>
+                </article>
                 </div>
             </div>
         </div>
     </div>
-    <div class="column">
-        <div class="card">
-            <div class="card-image">
-            </div>
-            <div class="card-content">
-                <div class="media">
-                    <div class="media-left">
-                        <figure class="image is-48x48">
-                            <img src="images/avatar.png">
-                        </figure>
-                    </div>
-                    <div class="media-content">
-                        <p class="title is-4">Chris Marolf</p>
-                        <p class="subtitle is-6">Admin</p>
-                    </div>
-                </div>
-
-                <div class="content">
-                    <p class=cardText>Herzlich Willkommen</p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+    <p class="bottomspaceBlog">
