--- a/pages/features.html
+++ b/pages/features.html
@@ -1,19 +1,25 @@
-<div class="tiles">
+<br>
+<br>
+<div class="tiles" class="marginTop">
     <div class="tile is-ancestor">
         <div class="tile is-vertical is-8">
             <div class="tile">
                 <div class="tile is-parent is-vertical">
                     <article class="tile is-child box">
-                        <p class="title">Learn from Experience</p>
+                        <p class="title">Learn more - How does it work?</p>
                     </article>
 
                     <article class="tile is-child box">
                         <article class="message is-dark">
                             <div class="message-body">
                                 <p class="title">Try it out</p>
-                                <p class="subtitle">Try out the online service in your Browser using the link below.</p>
-                                <a href="https://appex.ch/login#/">
-                                    <button class="button is-info">Take me to the Website</button>
+                                <p>The new version of Applied Experience's knowledge management tool, AppEx, is in beta version.
+                                    To try it out and be part of a growing community of beta testers, please contact us at
+                                    info@appex.ch.
+                                </p>
+                                <br>
+                                <a style="text-decoration:none" href="https://appex.ch/login#/">
+                                    <button class="button ">Take me to the Website</button>
                                 </a>
                             </div>
                         </article>
@@ -33,13 +39,13 @@
                     <article class="message is-dark">
                         <div class="message-body">
                             <p class="title">About us</p>
-                            <p>Applied Experience started in 2005 in Silicon Valley, CA and provided intranet design and the
-                                web-based knowledge management tool Connected Projects to general contractors and owners,
-                                several of them large, national firms.
+                            <p>Applied Experience, Inc. was founded in 2005 in Silicon Valley, CA and provided intranet design
+                                and the web-based knowledge management tool Connected Projects to general contractors and
+                                owners, several of them large, national firms.
                             </p>
                             <br/>
-                            <p>The current iteration of Applied Experience is based in Switzerland and internationally active
-                                with its new and vastly improved tool AppEx.</p>
+                            <p>Currently Applied Experience GmbH is based in Switzerland and internationally active with its
+                                new and vastly improved tool AppEx.</p>
                         </div>
                     </article>
                 </article>
@@ -61,12 +67,12 @@
                             This unique array perspective ensures that experiences from latter project phases are captured
                             and turned into planning activities in preceding phases on future projects. For each phase and
                             discipline users create planning worksheets with a blend of personal lessons and relevant lessons
-                            from a large database.</p>
+                            from a large database.These can be used as personal planning tools or for kick-off meetings.</p>
                         <br>
-                        <p> For reporting purposes an overview array shows at a glance the project status with activities that
-                            have been checked for quality and open issues. This gives owners the assurance that lessons are
-                            being applied in the planning of activities and work products are checked for quality at every
-                            phase of a project.</p>
+                        <p> For reporting purposes an overview array shows the project status visually with activities that have
+                            been checked for quality and open issues. This gives owners the assurance that lessons are being
+                            applied in the planning of activities and work products are checked for quality at every phase
+                            of a project.</p>
                         <br>
                         <p>The software interacts with users at defined milestones to capture their new experiences and lessons,
                             ensuring the continuous accumulation and sharing of experiences and knowledge.</p>
@@ -75,4 +81,4 @@
             </div>
         </div>
     </div>
-</div>
+    <p class="bottomspace">
