--- a/pages/funktionen.html
+++ b/pages/funktionen.html
@@ -1,19 +1,25 @@
-<div class="tiles">
+<br>
+<br>
+<div class="tiles" class="marginTop">
     <div class="tile is-ancestor">
         <div class="tile is-vertical is-8">
             <div class="tile">
                 <div class="tile is-parent is-vertical">
                     <article class="tile is-child box">
-                        <p class="title">Aus Erfahrungen lernen</p>
+                        <p class="title">Mehr erfahren - Wie funktioniert es?</p>
                     </article>
 
                     <article class="tile is-child box">
                         <article class="message is-dark">
                             <div class="message-body">
-                                <p class="title">Ausprobieren</p>
-                                <p class="subtitle">Probieren Sie das Programm mit dem nachstehenden Link online aus</p>
-                                <a href="https://appex.ch/login#/">
-                                    <button class="button is-info">Zur Website:</button>
+                                <p class="title">Testen</p>
+                                <p>Die neueste Version von Applied Experience's Wissensmanagement Software, AppEx, ist in Beta
+                                    Modus. Um AppEx auszuprobieren und so Teil einer wachsenden Gruppe von Beta Testern zu
+                                    werden, können Sie uns unter info@appex.ch kontaktieren.
+                                </p>
+                                <br>
+                                <a style="text-decoration:none" href="https://appex.ch/login#/">
+                                    <button class="button ">Zur Webseite</button>
                                 </a>
                             </div>
                         </article>
@@ -22,7 +28,7 @@
                 <div class="tile is-parent">
                     <article class="tile is-child box">
                         <figure class="image">
-                            <img src="images\bridge.jpg">
+                            <img src="images/concrete.jpg">
                         </figure>
                     </article>
                 </div>
@@ -33,12 +39,13 @@
                     <article class="message is-dark">
                         <div class="message-body">
                             <p class="title">Über uns</p>
-                            <p>Applied Experience wurde 2005 im Silicon Valley gegründet und bot neben Intranet Dienstleistungen
+                            <p>Applied Experience, Inc. wurde 2005 im Silicon Valley gegründet und bot neben Intranet Dienstleistungen
                                 die Wissensmanagement Software Connected Projects an, welche unter anderen von grossen nationalen
                                 Generalunternehmern und Bauherren verwendet wurde.</p>
                             <br>
-                            <p>Aktuell ist Applied Experience in der Schweiz angesiedelt und international tätig mit der neuen
-                                und stark verbesserten Application AppEx.</p>
+                            <p>Aktuell ist Applied Experience GmbH in der Schweiz angesiedelt und international mit der neuen
+                                und stark verbesserten Application AppEx tätig.
+                            </p>
                         </div>
                     </article>
                 </article>
@@ -52,23 +59,24 @@
                         <p class="title">Wie funktioniert es?</p>
                         <p>AppEx ist eine Web-basiertes Planungs- und Analysetool für alle, die in Planungs- und Bauprojekten
                             koordinative Aufgaben wahrnehmen (Architekten, Baumanager, Generalunternehmer, Bauherrenvertreter).
-                            AppEx kann von Einzelpersonen oder Firmenjeder Grösse eingestzt werden. AppEx ermöglicht es Erfahrungen
-                            von Personen und Firmen zu dokumentieren und anwendbar zu machen.</p>
+                            AppEx kann von Einzelpersonen oder Firmenjeder Grösse eingesetzt werden. AppEx ermöglicht es,
+                            Erfahrungen von Personen und Firmen zu dokumentieren und anwendbar zu machen.</p>
                         <br>
                         <p>AppEx operiert mit einem anpassbaren Gerüst aus Projektphasen und Gewerken. Dieses spezielle Rahmenwerk
-                            stellt sicher, dass Erfahrungen aus späteren Projektphasen dokumentiert werden und in anderen
-                            Projekten in Planungsaktivitäten in früheren Phasen umgewandelt werden. Pro Phase und Gewerk
-                            lassen sich Arbeitsblätter mit einer Mischung aus persönlichen und übergeordneten Lehren erstellen.</p>
+                            stellt sicher, dass Erfahrungen aus späteren Projektphasen dokumentiert und in anderen Projekten
+                            in Planungsaktivitäten in früheren Phasen umgewandelt werden. Pro Phase und Gewerk lassen sich
+                            Arbeitsblätter mit einer Mischung aus persönlichen und übergeordneten Lehren erstellen. Diese
+                            Arbeitsblätter können als Planungshilfen oder Startsitzungen eingesetzt werden </p>
                         <br>
-                        <p>Zur Projektanalyse dokumentiert eine Karte den Projektstand mit geplanten, offenen, und geprüften
-                            Aktivitäten. Dies gibt Bauherren die Gewissheit, dass Lehren in der Planung von Aktivitäten einfliessen,
-                            und dass Arbeitsprodukte in jeder Phase auf Qualität geprüft werden.</p>
+                        <p>Zur Projektanalyse dokumentiert eine Karte grafisch den Projektstand mit geplanten, offenen, und
+                            geprüften Aktivitäten. Dies gibt Bauherren die Gewissheit, dass Lehren in der Planung von Aktivitäten
+                            einfliessen, und dass Arbeitsprodukte in jeder Phase auf Qualität geprüft werden.</p>
                         <br>
                         <p>AppEx kontaktiert Nutzer zu definierten Meilensteinen, um neue Erfahrungen und Lehren zu dokumentieren
                             und stellt so den lückenlosen Zyklus von Wissenserfassung und Wissensaustausch sicher.</p>
-                    </div>
                 </article>
             </article>
+            </div>
         </div>
     </div>
-</div>
+    <p class="bottomspace">
