--- a/pages/home.html
+++ b/pages/home.html
@@ -5,25 +5,25 @@
             <div class="tile">
                 <div class="tile is-parent is-vertical">
                     <article class="tile is-child box">
-                        <p class="title">Welcome to
-                            <strong>applied</strong>|experience</p>
+                        <p class="title"> Learn from Experience</p>
                     </article>
                     <article class="tile is-child box">
-                        <p class="title">What do we do?</p>
+                        <p class="title">Features</p>
                         <div class="content">
                             <article class="message is-dark">
                                 <div class="message-body">
-                                    <p>We have been providing knowledge management solutions to the construction industry since
-                                        1998. Our clients include firms of all sizes with annual construction budgets ranging
-                                        between $100m and multi-billion dollars.</p>
-                                    <p>We develop cost effective solutions; we know how to work with existing software applications
-                                        and we can deploy solutions rapidly. We are able to anticipate the time and effort
-                                        it takes to implement a knowledge sharing solution. </p>
-                                    <p> We develop solutions that meet the needs of your employees and fit your organization.
-                                        We ensure that these solutions are implemented successfully and with minimal distraction
-                                        to your business operation.</p>
-                                    <p> Most importantly, we know how to promote knowledge sharing and how to keep knowledge
-                                        sharing programs vibrant and interesting.</p>
+                                    <p>AppEx is a web-based planning and reporting tool for anyone with coordinative responsibilities
+                                        in a building project. AppEx can be used by individuals or companies.</p>
+                                    <br>
+                                    <p>AppEx is experience-based. It allows you plan activities based on the knowledge and experiences
+                                        gained by you or people in your organization.</p>
+                                    <br>
+                                    <p>AppEx allows you to record solutions to problems and document the quality of work products
+                                        upon completion of project phases.</p>
+                                    <br>
+                                    <p>AppEx shows graphic status maps of projects, making the planning and QC status of projects
+                                        very visible.
+                                    </p>
                                 </div>
                             </article>
                         </div>
@@ -45,10 +45,9 @@
                     <div class="content">
                         <article class="message is-dark">
                             <div class="message-body">
-                                <p>Our solutions are cost effective and have helped clients save thousands of dollars per employee
-                                    every year. We think the current economic environment is an ideal time to take advantage
-                                    of improved staff availability and develop the tools that will save you money and make
-                                    you more efficient now. Invest in your knowledge infrastructure today!</p>
+                                <p>Applied Experience GmbH develops and distributes the AppEx knowledge management software,
+                                    which can be deployed by individuals or firms. For firms we also offer consulting services
+                                    to develop inhouse knowledge management expertise. </p>
                             </div>
                         </article>
                     </div>
@@ -58,55 +57,22 @@
         <div class="tile is-parent">
             <article class="tile is-child box">
                 <div class="content">
-                    <p class="title">Our product</p>
+                    <p class="title">Benefits</p>
                     <div class="content">
                         <article class="message is-dark">
                             <div class="message-body">
-                                <p>Applied Experience develops knowledge sharing platforms and intranets for firms in the construction
-                                    industry. If you are interested in lean construction techniques, knowledge management,
-                                    intranet development, or quality management you should contact us. We can help you with
-                                    the following initiatives: Prevent Construction Defects and Incomplete Design Documents:
-                                    Capture lessons learned with Connected Projects, our revolutionary knowledge sharing
-                                    platform (also available on a MS SharePoint platform).</p>
-
-                                <p>Get Organized: We create corporate intranets using Microsoft SharePoint or open source platforms.</p>
-                                <p>Update Procedures: We write standard operating procedures for your organization.</p>
-                                <p>Content for Lean Construction or Quality Initiatives: We provide you with ready-to-use, in-depth
-                                    content for QC Programs and knowledge sharing initiatives.</p>
-                                <p>Solutions That Employees Use: We specialize in implementation and pride ourselves on developing
-                                    solutions that stand the test of time.</p>
+                                <p>• Very easy to use. Saves time in the preparation of estimates, submittals, and field QC
+                                    documents
+                                </p>
+                                <p>• Higher planning quality in early project phases results in more accurate submittals, and
+                                    cost estimates. This means fewer change orders, rework and claims </p>
+                                <p>• Helps you ask clients the important design questions early </p>
+                                <p>• See project status at a glance, including potential risks and open issues</p>
+                                <p>• Make experiences actionable for future projects</p>
+                                <p>• Always available - works on all mobile devices
                             </div>
                         </article>
                     </div>
-                </div>
-            </article>
-        </div>
-    </div>
-
-    <div class="tile is-ancestor">
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title">
-                    Intranets
-                </p>
-                <p class="subtitle">Procedure Manuals</p>
-                <div class="content">
-                    <article class="message is-dark">
-                        <div class="message-body">
-                            <p>Intranets allow you to disseminate corporate documents, resources, calendars, news, etc. through
-                                a web-based application where documents can be displayed as web pages. </p>
-                        </div>
-                    </article>
-                </div>
-            </article>
-        </div>
-        <div class="tile is-parent is-8">
-            <article class="tile is-child box">
-                <p class="title">Main column</p>
-                <p class="subtitle">With some content</p>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ornare magna eros, eu pellentesque tortor
-                        vestibulum ut. Maecenas non massa sem. Etiam finibus odio quis feugiat facilisis.</p>
                 </div>
             </article>
         </div>
