removed the try-out button

--- a/pages/funktionen.html
+++ b/pages/funktionen.html
@@ -18,9 +18,9 @@
                                     werden, können Sie uns unter info@appex.ch kontaktieren.
                                 </p>
                                 <br>
-                                <a style="text-decoration:none" href="https://appex.ch/login#/">
+                                <!-- <a style="text-decoration:none" href="https://appex.ch/login#/">
                                     <button class="button ">Zur Webseite</button>
-                                </a>
+                                </a> -->
                             </div>
                         </article>
                     </article>
