--- a/pages/features.html
+++ b/pages/features.html
@@ -18,9 +18,9 @@
                                     info@appex.ch.
                                 </p>
                                 <br>
-                                <a style="text-decoration:none" href="https://appex.ch/login#/">
+                                <!-- <a style="text-decoration:none" href="https://appex.ch/login#/">
                                     <button class="button ">Take me to the Website</button>
-                                </a>
+                                </a> -->
                             </div>
                         </article>
                     </article>
