changed pictures a bit

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -23,7 +23,7 @@
                     <div class="tile is-parent">
                         <article class="tile is-child box">
                             <figure class="image">
-                                <img src="images/concrete.jpg">
+                                <img src="images/bridge.jpg">
                             </figure>
                         </article>
                     </div>
