improved margin and padding of pages

--- a/pages/features.html
+++ b/pages/features.html
@@ -1,6 +1,4 @@
-<br>
-<br>
-<div class="tiles" class="marginTop">
+<div class="tiles">
     <div class="tile is-ancestor">
         <div class="tile is-vertical is-8">
             <div class="tile">
