--- a/pages/deBlog.html
+++ b/pages/deBlog.html
@@ -1,7 +1,4 @@
-<br>
-<br>
-<div class="marginTop">
-    <div class="tiles" class="marginTop">
+    <div class="tiles" >
         <div class="tile is-ancestor">
             <div class="tile is-vertical is-8">
                 <div class="tile">
@@ -43,5 +40,4 @@
                 </div>
             </div>
         </div>
-    </div>
     <p class="bottomspaceBlog">
